--- a/views/partials/_search.handlebars
+++ b/views/partials/_search.handlebars
@@ -1,6 +1,6 @@
-<form id=class="form">
+<form id="search-form" class="form">
   <div class="form-group col-xs-7 col-xs-offset-2">
-    <input type="text" class="form-control" id="search" placeholder="Search for products...">
+    <input type="text" class="form-control" id="search" name="refine[search]" placeholder="Search for products...">
   </div>
   <button type="submit" class="btn btn-primary"></span>Search &nbsp;<span class="glyphicon glyphicon-search"></button>
 </form>
