--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -9,7 +9,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/products">Mimir's Market</a>
+        <a class="navbar-brand" href="/"><h1>Mimir's Market</h1></a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -32,7 +32,8 @@
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 
-    <div class="col-xs-12 well well-sm refine-well">
+		{{#if showRefineWidget }}
+    <div id="refine-container" class="col-xs-12 well well-sm refine-well">
       <h3 class="text-center">Refine your results</h3>
       <div class="row">
       {{>_search}}
@@ -44,6 +45,8 @@
       {{>_sort}}
       </div>
     </div>
+		<script src="/scripts/refine.js"></script>
+		{{/if}}
   </nav>
 
 </div>
