--- a/views/partials/_sort.handlebars
+++ b/views/partials/_sort.handlebars
@@ -1,12 +1,12 @@
-<form id=class="form">
+<form id="sort-form" class="form">
   <div class="form-group col-xs-3 col-xs-offset-4">
-    <select class="form-control" name="refine[sort]">
-      <option value="0">Sort results by</option>
-      <option value="1">Name ascending</option>
-      <option value="2">Price ascending</option>
-      <option value="3">Price descending</option>
-      <option value="4">Newest first</option>
-      <option value="5">Oldest first</option>
+    <select id="sort" class="form-control" name="refine[sort]">
+      <option value="-1">Sort results by</option>
+      <option value="name">Name ascending</option>
+      <option value="price">Price ascending</option>
+      <option value="price DESC">Price descending</option>
+      <option value="createdAt DESC">Newest first</option>
+      <option value="createdAt">Oldest first</option>
     </select>
   </div>
   <button type="submit" class="btn btn-primary"></span>Sort &nbsp;<span class="glyphicon glyphicon-sort"></button>
