--- a/views/product.handlebars
+++ b/views/product.handlebars
@@ -27,7 +27,7 @@
         <h3><strong>Price: </strong>${{ product.price }}.00</h3>
         <h3><strong>Name: </strong>{{ product.name }}</h3>
         <h3><strong>Category: </strong>{{ product.Category.name }}</h3>
-        <div class="text-center cart-button"><button type="button" class="btn btn-primary">Add to Cart</button></div>
+        <a class="text-center cart-button"><button type="button" class="btn btn-primary">Add to Cart</button></a>
       </section>
     </div>
   {{/each}}
