--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,11 +1,17 @@
 .product-box{
-  border: 2px solid black;
+  border: 4px solid black;
+  border-radius: 10px;
   margin-top: 20px;
+  margin-bottom: 10px;
 }
 
 h3 {
   text-align: center;
   font-size: 18px;
+}
+
+h4 {
+  font-size: 14px;
 }
 
 img {
@@ -16,4 +22,16 @@ img {
 
 .cart-button {
   margin-bottom: 10px;
+}
+
+button {
+  margin: 10px;
+}
+
+input {
+  margin-top: 10px;
+}
+
+.btn {
+  margin: 10px;
 }
