--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,30 +2,30 @@
   <div class="col-xs-12">
     <h2>Products</h2>
 
-      <form action ="/products/query" method="post">
-        <!-- Search Category -->
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="search" name="search" />
-        </div>
-        <div class="form-group">
-          <input type="submit" class="btn btn-primary" />
-        </div>
+    <form action="/products/query" method="post">
+      <!-- Search Category -->
+      <div class="form-group">
+        <input type="text" class="form-control" placeholder="search" name="search" />
+      </div>
+      <div class="form-group">
+        <input type="submit" class="btn btn-primary" />
+      </div>
 
-        <!-- Filter by Category -->
-        <div class="form-group">
-          <label for="category-selection">Category</label>
-          <select name="filter[categoryId]" class="form-control">
+      <!-- Filter by Category -->
+      <div class="form-group">
+        <label for="category-selection">Category</label>
+        <select name="filter[categoryId]" class="form-control">
             <option value=""></option>
             {{#each categories as |category|}}
               <option value="{{category.id}}">{{category.name}}</option>
             {{/each}}
           </select>
-        </div>
+      </div>
 
-        <!-- Filter by min price -->
-        <div class="form-group">
-          <label for="category-selection">Min Price</label>
-          <select name="filter[minPrice]" class="form-control">
+      <!-- Filter by min price -->
+      <div class="form-group">
+        <label for="category-selection">Min Price</label>
+        <select name="filter[minPrice]" class="form-control">
             <option value=""></option>
             <option value="0">$0.00</option>
             <option value="20">$20.00</option>
@@ -34,12 +34,12 @@
             <option value="80">$80.00</option>
             <option value="100">$100.00</option>
           </select>
-        </div>
+      </div>
 
-          <!-- Filter by max price -->
-        <div class="form-group">
-          <label for="category-selection">Max Price</label>
-          <select name="filter[maxPrice]" class="form-control">
+      <!-- Filter by max price -->
+      <div class="form-group">
+        <label for="category-selection">Max Price</label>
+        <select name="filter[maxPrice]" class="form-control">
             <option value=""></option>
               <option value="0">$0.00</option>
               <option value="20">$20.00</option>
@@ -48,9 +48,9 @@
               <option value="80">$80.00</option>
               <option value="100">$100.00</option>
           </select>
-        </div>
+      </div>
 
-        <!-- Filter by max price -->
+      <!-- Filter by max price -->
       <div class="form-group">
         <label for="sort-selection">Submit Sort By</label>
         <select name="sortType" class="form-control">
@@ -64,25 +64,31 @@
         </select>
       </div>
 
-        <div class="form-group">
-          <input type="submit" class="btn btn-primary" value="filter" />
-        </div>
-      </form>
+      <div class="form-group">
+        <input type="submit" class="btn btn-primary" value="filter" />
+      </div>
+    </form>
   </div>
 </div>
 
 <div class="row">
   {{#if products}}
-  {{#each products as |product|}}
-    <div class="col-xs-4">
-      <section class="product-box">
-        <img src="{{product.imageUrl}}" class="img-responsive" align="middle" />
-        <h3><strong>Price: </strong>${{ product.price }}.00</h3>
-        <a href="/products/{{product.id}}/category/{{product.CategoryId}}"><h3><strong>Name: </strong>{{ product.name }}</h3></a>
-        <h3><strong>Category: </strong>{{ product.Category.name }}</h3>
-        <div class="text-center cart-button"><button type="button" class="btn btn-primary">Add to Cart</button></div>
-      </section>
-    </div>
-  {{/each}}
+    {{#each products as |product|}}
+      <div class="col-xs-4">
+        <form class="product-box" action="/cart/addNewItem" method="post">
+          <input type="hidden" name="productId" value="{{product.id}}"></input>
+
+          <img src="{{product.imageUrl}}" name="picture" value="{{product.imageUrl}}" class="img-responsive" align="middle" />
+          <h3><strong>Price: </strong>${{ product.price }}.00</h3>
+          <a href="/products/{{product.id}}/category/{{product.CategoryId}}"><h3><strong>Name: </strong>{{ product.name }}</h3></a>
+          <h3><strong>Category: </strong>{{ product.Category.name }}</h3>
+
+          <div class="text-center cart-button form-group">
+            <button type="submit" class="btn btn-primary">Add to Cart</button>
+          </div>
+        </form>
+
+      </div>
+    {{/each}}
   {{/if}}
 </div>
