--- a/views/products/single.handlebars
+++ b/views/products/single.handlebars
@@ -1,6 +1,6 @@
 <header class="page-header">
   <h1>{{ product.name }}<small for="count"> {{ product.prettyPrice }}</small></h1>
-  Category: <a href="{{ categoryPath product.Category.id }}">{{ product.Category.name }}</a>
+  Category: {{ product.Category.name }}
 </header>
 
 <div class="panel panel-primary">
