successfully check out and save orders to the database

--- a/views/cart.handlebars
+++ b/views/cart.handlebars
@@ -36,7 +36,7 @@
 					</form>
 				</div>
 				<div class="col-xs-4 col-md-3">
-					<button class="btn btn-primary">Checkout</button>
+					<a href="/checkout" class="btn btn-primary">Checkout</a>
 				</div>
 			{{else}}
 				<div class="col-md-8 col-md-offset-2">
