--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -60,8 +60,8 @@
 					<option value="name-DESC">Sort By Name Descending</option>
 					<option value="price-ASC">Sort By Price Ascending</option>
 					<option value="price-DESC">Sort By Price Descending</option>
-					<option value="updated_at-DESC">Sort By Newest First</option>
-					<option value="update_at-ASC">Sort By Oldest First</option>
+					<option value="updatedAt-DESC">Sort By Newest First</option>
+					<option value="updatedAt-ASC">Sort By Oldest First</option>
 				</select>
 			</div>
 		</div>
