--- a/views/checkout.handlebars
+++ b/views/checkout.handlebars
@@ -1,7 +1,7 @@
 <h2>Checkout</h2>
 
 <div class="row">
-	<form>
+	<form action="/checkout/charge" method="post">
 		<div class="col-md-6">
 			<h3>Billing Info</h3>
 			<fieldset>
@@ -62,20 +62,20 @@
 			</div>
 
 			<div class="row">
-				<div class="col-xs-4 col-xs-offset-2">
-					<button class="btn btn-primary">Submit Payment</button>
-				</div>
-				<script
+				<div class="col-xs-4 col-xs-offset-2 col-xs-push-4">
+					<script
 			    src="https://checkout.stripe.com/checkout.js" class="stripe-button"
 			    data-key="{{ STRIPE_PK }}"
-			    data-amount="100"
+			    data-amount="{{sum}}00"
 			    data-name="Stripe Node Test"
 			    data-description="Widget"
 			    data-image="https://stripe.com/img/documentation/checkout/marketplace.png"
 			    data-locale="auto"></script>
+				</div>
+				
 				</form>
-				<div class="col-xs-4">
-					<button class="btn btn-danger">Return to Cart</button>
+				<div class="col-xs-4 col-xs-pull-4">
+					<a href="/cart" class="btn btn-danger">Return to Cart</a>
 				</div>
 			</div>
 		</div>
