--- a/views/layouts/application.handlebars
+++ b/views/layouts/application.handlebars
@@ -20,6 +20,9 @@
   {{> shared/_nav }}
   <main class="container">
     {{> shared/_flash }} {{{ body }}}
+    <hr>
+    <p>Thank you for perusing Mimir's market! Do stop by again.</p>
+    <hr>
   </main>
 </body>
 
