--- a/views/shared/_nav.handlebars
+++ b/views/shared/_nav.handlebars
@@ -21,15 +21,16 @@
       </form>
       <ul class="nav navbar-nav">
         <li><a href="{{ productsPath }}">Products</a></li>
-        <li><a href="{{ cartPath }}">View Cart</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
+        <li><a href="{{ cartPath }}">View Cart</a></li>
+        <li><a href="{{ checkoutPath }}">Check Out</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ cartProducts.length }} Poducts <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="{{ checkoutPath }}">Check Out</a></li>
-            <li role="separator" class="divider"></li>
-            {{#each cartProducts as |product| }}
+            {{#unless cartProducts}}
+            <li><a href="#">Your cart is empty...</a></li>
+            {{/unless}} {{#each cartProducts as |product| }}
             <li><a href="{{ productPath product.id }}">{{ product.count }} {{ product.name }}</a></li>
             {{/each}}
           </ul>
