--- a/views/products/index.handlebars
+++ b/views/products/index.handlebars
@@ -42,7 +42,7 @@
   <div class="panel-body">
     {{#each products as |product|}}
       {{#if product.isInCart}}
-      <form method='POST' action='/cart/add'>
+      <form method='GET' action='/cart'>
         <div class="col-xs-4">
           <img src='/{{product.img}}' class='smallImg'>
           <h3>${{product.price}}</h3>
@@ -52,7 +52,7 @@
         </div>
       </form>
       {{else}}
-      <form method='POST' action='/cart/add'>
+      <form method='POST' action='/cart'>
         <div class="col-xs-4">
           <img src='/{{product.img}}' class='smallImg'>
           <h3>${{product.price}}</h3>
