--- a/views/shared/_nav.handlebars
+++ b/views/shared/_nav.handlebars
@@ -35,6 +35,14 @@
             {{/each}}
           </ul>
         </li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            <span class="glyphicon glyphicon-cog" aria-hidden="true"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="{{ adminOrdersPath }}">Orders</a></li>
+            <li><a href="{{ adminAnalyticsPath }}">Analytics</a></li>
+          </ul>
+        </li>
       </ul>
 
     </div>
