--- a/views/cart/checkout.handlebars
+++ b/views/cart/checkout.handlebars
@@ -31,44 +31,44 @@
     <hr>
     <h2>Order Total</h2>
     <h3 class="text-success">{{ cartTotal }}</h3>
-    <hr>
   </section>
 
   <section class="col-sm-6 col-lg-4">
     <h2>Billing Info</h2>
-    <form action="{{ checkoutPath }}" method="post">
+    <form action="/cart/charges" method="post">
       <fieldset>
         <legend>Personal</legend>
         <section class="form-group">
           <label for="fname">First Name</label>
-          <input type="text" name="fname" class="form-control" pattern="^\w{1, 20}$" required>
+          <input type="text" name="fname" class="form-control" value="Korben">
         </section>
         <section class="form-group">
           <label for="lname">Last Name</label>
-          <input type="text" name="lname" class="form-control" pattern="^\w{1, 20}$" required>
+          <input type="text" name="lname" class="form-control" value="Dallas">
         </section>
         <section class="form-group">
           <label for="email">Email</label>
-          <input type="email" name="email" class="form-control" required>
+          <input type="email" name="email" class="form-control" value="popsicle@zorg.industries">
         </section>
       </fieldset>
       <fieldset>
         <legend>Address</legend>
         <section class="form-group">
           <label for="street">Street</label>
-          <input type="text" name="street" class="form-control" pattern="^[\w\ ]{1, 60}$" required>
+          <input type="text" name="street" class="form-control" value="281-53 Block 5,000">
         </section>
         <section class="form-group">
           <label for="city">City</label>
-          <input type="text" name="city" class="form-control" pattern="^[\w\ ]{1, 60}$" required>
+          <input type="text" name="city" class="form-control" value="Brooklyn">
         </section>
         <section class="form-group">
           <label for="zip">Zip</label>
-          <input type="text" name="zip" class="form-control" pattern="^\d{5}$" required>
+          <input type="text" name="zip" class="form-control" value="11203">
         </section>
         <section>
           <label for="state">State</label>
-          <select name="state" class="form-control" required>
+          <select name="state" class="form-control">
+            <option value="33">New York</option>
             {{#each states as |state|}}
             <option value="{{ state.id }}">{{ state.name }}</option>
             {{/each}}
@@ -76,8 +76,10 @@
         </section>
       </fieldset>
       <hr>
-      <a href="{{ cartPath }}" class="btn btn-warning">Return to Cart</a>
-      <button class="btn btn-primary">Submit Payment</button>
+      <a href="{{ cartPath }}" class="btn btn-danger">Return to Cart</a>
+      <script src="https://checkout.stripe.com/checkout.js" class="stripe-button" data-key="{{ STRIPE_PK }}" data-amount="{{ centTotal }}"
+        data-name="Stripe Node Test" data-description="Widget" data-image="https://stripe.com/img/documentation/checkout/marketplace.png"
+        data-locale="auto"></script>
     </form>
 
   </section>
