--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -14,7 +14,7 @@
 	<tbody>
 		{{#each orders as |order|}}
 			<tr>
-				<td>{{order.id}}</td>
+				<td><a href="/admin/{{order.id}}">{{order.id}}</td>
 				<td>{{order.description}}</td>
 				<td>{{order.createdAt}}</td>
 				<td>${{order.total}}.00</td>
