--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,6 +3,7 @@
 <head>
 	<title>Mimir's Market</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link rel="stylesheet" href="/stylesheets/styles.css">
 	<script
   	src="http://code.jquery.com/jquery-3.2.1.min.js"
   	integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
@@ -12,9 +13,23 @@
 <body>
 	<header>
 		<nav class='navbar navbar-inverse'>
-			<h1><a href='/'>Mimir's Market</a></h1>
+			<div class="container">
+				<div class="row">
+					<div class="col-xs-6">
+						<h1><a href='/'>Mimir's Market</a></h1>
+					</div>
+					<div class="col-md-1 col-sm-2 col-md-offset-3">
+						<a href="/cart"><img src="/images/icons/cart.svg" class="icon"></a>
+					</div>
+					<div class="col-md-1 col-sm-2">
+						<a href="/admin"><img src="/images/icons/dashboard.svg" class="icon"></a>
+					</div>
+					<div class="col-md-1 col-sm-2">
+						<a href="/admin/analytics"><img src="/images/icons/calculator.svg" class="icon"></a>
+					</div>
+				</div>
+			</div>
 		</nav>
-
 	</header>
 
 	<main class="container">
