--- a/views/checkout/index.handlebars
+++ b/views/checkout/index.handlebars
@@ -3,7 +3,7 @@
 <div class="container">
   <div class='row'>
     <div class='col-md-5'>
-      <form class='form-control panel'>
+      <form class='form-control panel' action='/checkout' method='post'>
         <div class='panel panel-default'
       <h2>Billing Info</h2>
         <p>Personal Info</p>
@@ -31,7 +31,6 @@
             <option>{{state}}</option>
           {{/each}}
         </select>
-      </form>
     </div>
       </div>
 
@@ -49,8 +48,10 @@
       <div>
         <h2>Total: ${{total}}</h2>
       </div>
-      <a href='/cart'><button class="btn btn-danger">Return to Cart</button></a>
-      <button class="btn btn-primary">Submit Payment</button>
+      <button class="btn btn-primary" type='submit'>Submit Payment</button>
+    </form>
+    <a href='/cart'><button class="btn btn-danger">Return to Cart</button></a>
+
     </div>
 
   </div>
