--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -97,6 +97,7 @@
 					<input type=hidden value='{{product.price}}' name='price' />
 					<input type=hidden value='{{product.name}}' name='name' />
 					<input type=hidden value='{{product.Category.name}}' name='category' />
+					<input type=hidden value='{{product.description}}' name='description' />					
 					<button class="btn btn-large btn-primary" type='submit'>Add to Cart</button>
 				</form>
 			{{/if}}
