--- a/views/products/index.handlebars
+++ b/views/products/index.handlebars
@@ -9,13 +9,18 @@
 	</div>
 	<div class="col-md-7">
 		<p>{{product.description}}</p>
-		<form method='post' action='/addCart'>
-			<input type=hidden value ='{{product.id}}' name='productId' />
-			<input type=hidden value ='{{product.price}}' name='price' />
-			<input type=hidden value ='{{product.name}}' name='name' />
-			<input type=hidden value ='{{product.Category.name}}' name='category' />
-			<button class="btn btn-large btn-primary cart-addition" type='submit'>Add to Cart</button>
-		</form>
+		{{#if product.selected}}
+			<a href='/cart'><button class="btn btn-large btn-success">Edit in Cart</button></a>
+		{{else}}
+			<form method='post' action='/addCart'>
+				<input type=hidden value ='{{product.id}}' name='productId' />
+				<input type=hidden value ='{{product.price}}' name='price' />
+				<input type=hidden value ='{{product.name}}' name='name' />
+				<input type=hidden value ='{{product.Category.name}}' name='category' />
+				<input type=hidden value ='{{product.description}}' name='category' />
+				<button class="btn btn-large btn-primary cart-addition" type='submit'>Add to Cart</button>
+			</form>
+		{{/if}}
 	</div>
 </div>
 
