rough draft checkout form done

--- a/views/cart.handlebars
+++ b/views/cart.handlebars
@@ -51,6 +51,6 @@
     <a class="btn btn-danger btn-lg" href="/cart/?_method=delete">Clear Cart</a>
   </div>
   <div class="col-xs-2">
-    <button class="btn btn-lg btn-primary">Checkout</button>
+    <a href="/cart/checkout" class="btn btn-lg btn-primary">Checkout</a>
   </div>
 </div>
