--- a/views/product.handlebars
+++ b/views/product.handlebars
@@ -1,39 +1,63 @@
 <div class="row">
   {{#if productSel}}
-  {{#each productSel as |productSel|}}
-  <div class="col-xs-12">
-    <h2 class="text-center">Product</h2>
-      <section class="product-box">
-        <div class="col-xs-4">
-          <img src="{{productSel.imageUrl}}" class="img-responsive" align="middle" />
-        </div>
-        <h3><strong>Price: </strong>${{ productSel.price }}.00</h3>
-        <h3><strong>Name: </strong>{{ productSel.name }}</h3>
-        <h3><strong>Category: </strong>{{ productSel.Category.name }}</h3>
-        <p><strong>Description: </strong>{{productSel.description}}</p>
-        <div class="text-center cart-button"><button type="button" class="btn btn-primary">Add to Cart</button></div>
-      </section>
-  </div>
-  {{/each}}
+    {{#each productSel as |productSel|}}
+      <div class="col-xs-12">
+        <h2 class="text-center">Product</h2>
+        <section class="product-box">
+          <div class="col-xs-4">
+            <img src="{{productSel.imageUrl}}" class="img-responsive" align="middle" />
+          </div>
+          <h3><strong>Price: </strong>${{ productSel.price }}.00</h3>
+          <h3><strong>Name: </strong>{{ productSel.name }}</h3>
+          <h3><strong>Category: </strong>{{ productSel.Category.name }}</h3>
+          <p><strong>Description: </strong>{{productSel.description}}</p>
+
+          <form action="/cart/addNewItem" method="post">
+            <input type="hidden" name="productId" value="{{productSel.id}}"></input>
+            <input type="hidden" name="productPage" value="true"></input>
+            <input type="hidden" name="productIdView" value="{{productSel.id}}"></input>
+            <input type="hidden" name="CategoryIdView" value="{{productSel.CategoryId}}"></input>
+            {{#if productSel.inCart.length}}
+              <a href="/cart" class="text-center cart-button">
+                <div class="btn btn-success">Edit in Cart</div>
+              </a>
+            {{else}}
+              <div class="text-center cart-button form-group">
+                <button type="submit" class="btn btn-primary">Add to Cart</button>
+              </div>
+            {{/if}}
+          </form>
+        </section>
+      </div>
+    {{/each}}
   {{/if}}
 </div>
 
 <div class="row">
   {{#if products}}
-  {{#each products as |product|}}
-    <div class="col-xs-4">
-      <form class="product-box" action="/cart/addNewItem" method="post">
-        <input type="hidden" name="productId" value="{{product.id}}"></input>
-        <input type="hidden" name="productId" value="{{product.id}}"></input>
-        <input type="hidden" name="productIdView" value="{{product.id}}"></input>
+    {{#each products as |product|}}
+      <div class="col-xs-4">
+        <form class="product-box" action="/cart/addNewItem" method="post">
+          <input type="hidden" name="productId" value="{{product.id}}"></input>
+          <input type="hidden" name="productPage" value="true"></input>
+          <input type="hidden" name="productIdView" value="{{product.id}}"></input>
+          <input type="hidden" name="CategoryIdView" value="{{product.CategoryId}}"></input>
 
-        <img src="{{product.imageUrl}}" class="img-responsive" align="middle" />
-        <h3><strong>Price: </strong>${{ product.price }}.00</h3>
-        <h3><strong>Name: </strong>{{ product.name }}</h3>
-        <h3><strong>Category: </strong>{{ product.Category.name }}</h3>
-        <a class="text-center"><button type="button" class="btn btn-primary">Add to Cart</button></a>
-      </form>
-    </div>
-  {{/each}}
+          <img src="{{product.imageUrl}}" class="img-responsive" align="middle" />
+          <h3><strong>Price: </strong>${{ product.price }}.00</h3>
+          <h3><strong>Name: </strong>{{ product.name }}</h3>
+          <h3><strong>Category: </strong>{{ product.Category.name }}</h3>
+          {{#if product.inCart.length}}
+            <a href="/cart" class="text-center cart-button">
+              <div class="btn btn-success">Edit in Cart</div>
+            </a>
+          {{else}}
+            <div class="text-center cart-button form-group">
+              <button type="submit" class="btn btn-primary">Add to Cart</button>
+            </div>
+          {{/if}}
+        </form>
+      </div>
+    {{/each}}
   {{/if}}
 </div>
