--- a/views/layouts/application.handlebars
+++ b/views/layouts/application.handlebars
@@ -20,10 +20,12 @@
   {{> shared/_nav }}
   <main class="container">
     {{> shared/_flash }} {{{ body }}}
+  </main>
+  <footer class="container">
     <hr>
     <p>Thank you for perusing Mimir's market! Do stop by again.</p>
     <hr>
-  </main>
+  </footer>
 </body>
 
 </html>
