--- a/views/shared/_nav.handlebars
+++ b/views/shared/_nav.handlebars
@@ -19,14 +19,11 @@
         </section>
         <button type="submit" class="btn btn-default">Go</button>
       </form>
-      <ul class="nav navbar-nav">
-        <li><a href="{{ productsPath }}">Products</a></li>
-      </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="{{ cartPath }}">View Cart</a></li>
         <li><a href="{{ checkoutPath }}">Check Out</a></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ cartProducts.length }} Poducts <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ cartProducts.length }} Products <span class="caret"></span></a>
           <ul class="dropdown-menu">
             {{#unless cartProducts}}
             <li><a href="#">Your cart is empty...</a></li>
